/**
 * Licensed to the Apache Software Foundation (ASF) under one
 * or more contributor license agreements.  See the NOTICE file
 * distributed with this work for additional information
 * regarding copyright ownership.  The ASF licenses this file
 * to you under the Apache License, Version 2.0 (the
 * "License"); you may not use this file except in compliance
 * with the License.  You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

option java_package = "org.apache.tajo.ipc";
option java_outer_classname = "QueryMasterProtocol";
option java_generic_services = true;
option java_generate_equals_and_hash = true;

import "yarn_protos.proto";
import "tajo_protos.proto";
import "TajoIdProtos.proto";
import "CatalogProtos.proto";
import "PrimitiveProtos.proto";
import "TajoWorkerProtocol.proto";

service QueryMasterProtocolService {
  //from Worker
  rpc getTask(GetTaskRequestProto) returns (QueryUnitRequestProto);
  rpc statusUpdate (TaskStatusProto) returns (BoolProto);
  rpc ping (QueryUnitAttemptIdProto) returns (BoolProto);
  rpc fatalError(TaskFatalErrorReport) returns (BoolProto);
  rpc done (TaskCompletionReport) returns (BoolProto);

  //from TajoMaster's QueryJobManager
  rpc killQuery(QueryIdProto) returns (BoolProto);
  rpc executeQuery(QueryExecutionRequestProto) returns (BoolProto);
}